<resources>
    <string name="app_name">Language Learning</string>

    <!-- Home -->
    <string name="home_lang_src">Proposition</string>
    <string name="home_lang_dst">A trouver</string>
    <string name="home_start_test">Commencer</string>
        <!-- Drawer -->
    <string name="home_drawer_open">Open navigation drawer</string>
    <string name="home_drawer_close">Close navigation drawer</string>

    <!-- Test -->
    <string name="test_answer_hint">Proposition</string>
    <string name="test_display_subtext">Afficher la phonétique</string>
    <string name="test_check">Contrôler</string>
    <string name="test_good_answer">Correct</string>
    <string name="test_bad_answer">Faux : %1$s</string>

    <!-- Configuration -->
        <!-- Lang -->
    <string name="lang_activity_title">Langues</string>
            <!-- List -->
    <string name="lang_empty_list">Aucune langue</string>
            <!-- Edit -->
    <string name="lang_edit_hint_name">Nom de la langue</string>
    <string name="lang_edit_hint_flag">Emoji du drapeau</string>
    <string name="lang_edit_hint_iso_code">Code ISO</string>
    <string name="lang_edit_error_iso_code">Code ISO invalide</string>
            <!-- Dialog -->
    <string name="lang_dialog_message_delete">Voulez-vous supprimer cette langue?</string>
    <string name="lang_dialog_message_advice_minimum">Deux langues minimum sont nécessaires.\nAller les créer?</string>
    <string name="lang_dialog_title_add">Ajouter une Langue</string>
    <string name="lang_dialog_button_add">Autre langue</string>
        <!-- Word -->
    <string name="word_activity_title">Mots</string>
            <!-- List -->
    <string name="word_empty_list">Aucun mot</string>
            <!-- Edit -->
    <string name="word_name_hint">Mot</string>
    <string name="word_sub_hint">Phonétique</string>
    <string name="word_desc_hint">Description</string>
    <string name="word_title_translation_list">Traductions</string>
            <!-- Dialog -->
    <string name="word_dialog_message_delete">Voulez-vous supprimer ce mot?</string>
    <string name="word_dialog_message_delete_transaction">Voulez-vous supprimer cette traduction?</string>
    <string name="word_dialog_title_add_translation">Ajouter une traduction</string>

    <!-- Settings -->
    <string name="settings_activity_title">Paramètres</string>
        <!-- Database backup -->
    <string name="settings_backup_title">Sauvegarde</string>
    <string name="settings_backup_save">Sauvegarder</string>
    <string name="settings_backup_restore">Restaurer</string>
    <string name="settings_backup_clear">Tout supprimer</string>
            <!-- Error -->
    <string name="settings_error_no_permission_save">Pas de sauvegarde sans permission</string>
    <string name="settings_error_no_permission_restore">Pas de restauration sans permission</string>
    <string name="settings_error_external_storage_unavailable">Stockage externe indisponible</string>
    <string name="settings_error_save_backup">Erreur pendant l\'écriture de la sauvegarde</string>
    <string name="settings_error_restore_backup">Erreur pendant la lecture de la sauvegarde</string>

    <!-- Common -->
    <string name="all_add">Ajouter</string>
    <string name="all_update">Mettre à jour</string>
    <string name="all_yes">Oui</string>
    <string name="all_no">Non</string>
    <string name="all_cancel">Annuler</string>
    <string name="all_search_hint">Rechercher</string>
    <string name="all_data_import_success">Succès de l\'import</string>
    <string name="all_data_import_error">Echec de l\'import</string>
    <string name="all_data_export_success">Succès de l\'export</string>
    <string name="all_data_export_error">Echec de l\'export</string>
</resources>
