<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.or3lll.languagelearning.test.VocabularyTestActivity">

    <TextView
        android:id="@+id/tent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/tent"
        android:text="/" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/slash" />

    <TextView
        android:id="@+id/text_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slash"
        />

    <Button
        android:id="@+id/display_subtext_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_display_subtext"
        android:layout_below="@id/text_text"/>

    <TextView
        android:id="@+id/subtext_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@id/display_subtext_btn" />

    <EditText
        android:id="@+id/answer_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtext_text"
        android:inputType="textVisiblePassword"
        android:hint="@string/test_answer_hint" />

    <Button
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_check"
        android:layout_below="@id/answer_edittext"/>

</RelativeLayout>
